@@ -1,21 +1,19 @@
 
 package ui.controller;
 
+import domain.service.ContactService;
 import domain.service.PersonService;
 
 
 public class HandlerFactory {
 
-    public RequestHandler getHandler(String handlerName, PersonService model) {
+    public RequestHandler getHandler(String handlerName, PersonService personService, ContactService contactService) {
         RequestHandler handler = null;
         try {
             Class handlerClass = Class.forName("ui.controller."+ handlerName);
-            // Java 8/9
-            Object handlerObject = handlerClass.newInstance();
-            // Java 10
-            // Object handlerObject = handlerClass.getConstructor().newInstance();
+            Object handlerObject = handlerClass.getConstructor().newInstance();
             handler = (RequestHandler) handlerObject;
-            handler.setModel(model);
+            handler.setModel(personService, contactService);
         } catch (Exception e) {
             throw new RuntimeException("Deze pagina bestaat niet!!!!");
         }
